some css changes to avoid overflow in smaller screens

--- a/dhgui/src/app/wl/components/wl/wl.component.scss
+++ b/dhgui/src/app/wl/components/wl/wl.component.scss
@@ -33,7 +33,7 @@
 }
 
 .channel-container {
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 .available {
