--- a/dhgui/src/common.scss
+++ b/dhgui/src/common.scss
@@ -22,7 +22,7 @@
 }
 
 .row-height {
-    height: 43px !important;
+    height: 40px !important;
 }
 
 .inline-block {
